--- a/.github/workflows/python-release.yaml
+++ b/.github/workflows/python-release.yaml
@@ -75,6 +75,7 @@ jobs:
       published-version: ${{ steps.publish.outputs.published-version }}
     steps:
       - name: "Prepare app token"
+        if: ${{ vars.GH_BUMP_VERSION_APP_ID != '' && secrets.GH_BUMP_VERSION_APP_KEY != '' }}
         uses: actions/create-github-app-token@v1
         id: app-token
         with:
@@ -83,7 +84,7 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.app-token.outputs.token }}
+          token: ${{ steps.app-token.outputs.token || secrets.GITHUB_TOKEN }}
       - name: "Setup Python ${{ inputs.python-version }}"
         uses: actions/setup-python@v5
         with:
